<resources>
    <string name="app_name">bilalNoobKhan</string>
    <string name="teamA">Team A</string>
    <string name="zero">0</string>
    <string name="teamB">Team B</string>
    <string name="pointer1">1 Pointer</string>
    <string name="pointer2">2 Pointer</string>
    <string name="pointer3">5 Pointer</string>
    <string name="panelty">PANELTY</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
