<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Home">


    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/teamA"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/teamAscore"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textColor="@color/colorGrey"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/teamA1pointer"
            android:text="@string/pointer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/teamA2pointer"
            android:text="@string/pointer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/teamA5pointer"
            android:text="@string/pointer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/teamApanelty"
            android:text="@string/panelty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/teamB"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/teamBscore"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textColor="@color/colorGrey"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/teamB1pointer"
            android:text="@string/pointer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/teamB2pointer"
            android:text="@string/pointer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/teamB5pointer"
            android:text="@string/pointer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/teamBpanelty"
            android:text="@string/panelty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>